; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_get_mp_type_get.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_get_mp_type_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_option = type { i32 }

@MPV_FORMAT_OSD_STRING = common dso_local global i64 0, align 8
@MPV_FORMAT_STRING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.m_option* (i64)* @get_mp_type_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.m_option* @get_mp_type_get(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @MPV_FORMAT_OSD_STRING, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i64, i64* @MPV_FORMAT_STRING, align 8
  store i64 %7, i64* %2, align 8
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i64, i64* %2, align 8
  %10 = call %struct.m_option* @get_mp_type(i64 %9)
  ret %struct.m_option* %10
}

declare dso_local %struct.m_option* @get_mp_type(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
